--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Student Details</h2>
+	<table>
+		<tr>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</tr>
+		<tr>
+			<td>Anju</td>
+			<td>22</td>
+			<td>ECE</td>
+		</tr>
+		<tr>
+			<td>Srilakshmi</td>
+			<td>14</td>
+			<td>ECE</td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
