--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table>
-	<h2>Student Details</h2>
+	<caption>Student Details</caption>
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
